Fix width overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,10 @@
     min-height: 100vh;
     width: 100vw;
     overflow-x: hidden;
+    position: relative;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 
   
